feat: add Identity Core and JWT Bearer. create authentication

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
+    "Key": ""
   }
 }
