--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
+    "Key": ""
   }
 }
