feat: add product, order, and shipment process

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,1 +1,3 @@
 ConnectionStrings__DefaultConnection="Server=; Database=; User Id=; Password=; Encrypt=; TrustServerCertificate=; MultipleActiveResultSets=;"
+JWT__KEY="YOUR_JWT_KEY"
+DB_RESET_PASSWORD="YOUR_RESET_PASSWORD_KEY"
