--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -10,8 +10,8 @@
     "DefaultConnection": ""
   },
   "Jwt": {
-    "Issuer": "http://localhost",
-    "Audience": "http://localhost",
-    "Key": ""
+    "Issuer": "http://samz.runasp.net",
+    "Audience": "http://samz.runasp.net",
+    "SigningKey": ""
   }
 }
