feat: update package and icon

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,5 +27,8 @@
     "globals": "^16.3.0",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.6.1"
   }
 }
