--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react-swc": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -27,8 +27,5 @@
     "globals": "^16.3.0",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.2"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.6.1"
   }
 }
